# compare_alg

./: .gitignore  generate-numpers.py  run_algorithms.py
algorithms_in_c/: CMakeLists.txt
algorithms_in_c/bubble_sort/: CMakeLists.txt  bubble_sort.c
algorithms_in_c/heap_sort/: CMakeLists.txt  heap_sort.c
algorithms_in_c/insertion_sort/: CMakeLists.txt  insertion_sort.c
algorithms_in_c/merge_sort/: CMakeLists.txt  merge_sort.c
algorithms_in_c/quick_sort/: CMakeLists.txt  quick_sort.c
algorithms_in_c/radix_sort/: CMakeLists.txt  radix_sort.c  radix_sort.cpp
algorithms_in_c/selection_sort/: CMakeLists.txt  selection_sort.c
algorithms_in_c/shell_sort/: CMakeLists.txt  shell_sort.c
algorithms_in_c/utils/: CMakeLists.txt  print_array.c  print_array.h  read_from_file.c  read_from_file.h  swap.c  swap.h
