cmake_minimum_required(VERSION 3.25)
project(compare_alg)

set(CMAKE_C_STANDARD 17)

add_subdirectory(utils)
add_subdirectory(selection_sort)
add_subdirectory(bubble_sort)
add_subdirectory(insertion_sort)
add_subdirectory(merge_sort)
add_subdirectory(quick_sort)
add_subdirectory(heap_sort)
add_subdirectory(radix_sort)
add_subdirectory(shell_sort)
